# security_system

./: CMakeLists.txt  FaceDetector.cpp  LICENSE  README.md  emp_window.cpp  recognition.cpp  sql_con.cpp  train.cpp
include/: FaceDetector.h  camera_drawing_area.hpp  emp_window.hpp  extern_def.h  main_window.hpp  recognition.hpp  rw_csv.hpp  some_sql.hpp  sql_con.hpp  text_area.hpp  train.hpp
src/: camera_drawing_area.cpp  main_window.cpp  security_system.cpp  sql_con.cpp  text_area.cpp
